# hmds-prototypes

./: README.md  pyproject.toml
mlprotobox/: attention_stacking.py  gp.py  kan.py  moe.py  sklearn_utils.py  tocrh_utils.py
samples/: PairwiseAttentionRegressor.ipynb  PairwiseMoE.ipynb
tests/: test_attention_stacking.py  test_moe.py  test_sklearn_utils.py
