[project]
name = "mlprotobox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "polars>=1.16.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "autopep8>=2.3.1",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ipykernel>=6.29.5",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "--cov=mlprotobox --cov-report=term-missing --cov-report=xml"
markers = ["integration: mark a test as an integration test"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
