[project]
name = "mlprotobox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pandas-stubs>=2.2.3.241126",
    "pandas>=2.2.3",
    "polars>=1.16.0",
    "scikit-learn>=1.5.2,<1.6",
    "scipy>=1.14.1",
    "skorch>=1.0.0",
    "torch>=2.4.0",
    "tqdm",
]

[project.optional-dependencies]
cpu = ["torch>=2.5.1"]
cu118 = ["torch>=2.5.1"]

[tool.uv]
dev-dependencies = [
    "autopep8>=2.3.1",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ipykernel>=6.29.5",
]
conflicts = [[{ extra = "cpu" }, { extra = "cu118" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", extra = "cu118" },
    { index = "pytorch-cpu", extra = "cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "--cov=mlprotobox --cov-report=term-missing --cov-report=xml"
markers = ["integration: mark a test as an integration test"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ['sklearn.base', 'sklearn.linear_model', 'sklearn.utils.validation']
ignore_missing_imports = true
